fixes vertical alignment of nav icon

--- a/src/stylesheets/components/_side-nav.scss
+++ b/src/stylesheets/components/_side-nav.scss
@@ -56,7 +56,7 @@ a.open-panel {
   content: url(/assets/img/icon-eye.svg);
   width: 1.1em;
   height: 1.1em;
-  margin-top: 0.35em;
+  margin-top: 0.25em;
   opacity: 0.5;
   margin-left: 0.5em;
 }
